--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
   <script src="ml/kmedoids.js"></script>
   <script src="ml/neat.js"></script>
   <script src="ml/neat.graph.js"></script>
+  <script type="module" src="ml/api.js"></script>
 
   <script src="datafit-neat.js"></script>
 
