--- a/index.html
+++ b/index.html
@@ -238,6 +238,8 @@
 
 
   <!-- jQuery -->
+  <script src="bundle.js"></script>
+
   <script src="lib/jquery-1.11.3.min.js"></script>
   <script src="lib/jquery-ui.1.11.4.js"></script>
 
@@ -252,7 +254,6 @@
   <script src="ml/kmedoids.js"></script>
   <script src="ml/neat.js"></script>
   <script src="ml/neat.graph.js"></script>
-  <script type="module" src="ml/api.js"></script>
 
   <script src="datafit-neat.js"></script>
 
