--- a/static/index.html
+++ b/static/index.html
@@ -254,6 +254,7 @@
   <script src="ml/kmedoids.js"></script>
   <script src="ml/neat.js"></script>
   <script src="ml/neat.graph.js"></script>
+  <script src="ml/api.js"></script>
 
   <script src="datafit-neat.js"></script>
 
